# Habit_Buddy

./: thunder-collection_Habit-Buddy.json
CPPBACKEND/: CMakeLists.txt  HabitManager.cpp  HabitManager.h  NoteManager.cpp  User.cpp  main.cpp  notes.json  notesData.json  run.bat  user.h  vcpkg_rf.txt
CPPBACKEND/more files/: NoteManager.h  Routes.cpp  Routes.h  User.cpp  User.h
FRONTEND/: package-lock.json  package.json
FRONTEND/public/: index.html
FRONTEND/src/: App.js  index.js
FRONTEND/src/components/APP/: index.js
FRONTEND/src/components/addHabitModal/: index.js
FRONTEND/src/components/addNoteModal/: index.js
FRONTEND/src/components/calenderStrip/: calender.css  index.js
FRONTEND/src/components/categories/: index.js
FRONTEND/src/components/contact/: ContactUs.module.scss  index.js
FRONTEND/src/components/dashboard/: Chart.js  dashboard.css  index.js
FRONTEND/src/components/editHabitModal/: index.js
FRONTEND/src/components/editNoteModal/: index.js
FRONTEND/src/components/habits/: HabitHeader.js  index.js
FRONTEND/src/components/home/: index.js
FRONTEND/src/components/leftSidebar/: index.js  leftsidebar.css
FRONTEND/src/components/login/: index.js  login.css
FRONTEND/src/components/modal/: index.js
FRONTEND/src/redux/: apis.js  habitThunk.js  habitsApis.js  habitsSlice.js  habitsThunk.js  notesApis.js  notesSlice.js  notesThunk.js  store.js  thunk.js  userSlice.js  userThunk.js
FRONTEND/src/routes/: OtherRoute.js  PublicRoutes.js
FRONTEND/src/styles/: _globals.scss  _mixins.scss  _variables.scss
FRONTEND/src/utils/: calculateStreak.js  formatStartDate.js  getCurrentday.js  getDaysLeft.js  getNextDay.js  getcurrentTime.js
(+11 files in other folders)
